1. 新增读取保存阅读记录功能. 2. 修复点击阅读记录闪退问题.暂未实现点击进入书本内容界面.

--- a/LiveStone/LSReadRecordCell.xib
+++ b/LiveStone/LSReadRecordCell.xib
@@ -40,6 +40,10 @@
                 <constraint firstAttribute="trailing" secondItem="CN7-fu-u4Z" secondAttribute="trailing" constant="8" id="qbh-zp-sUI"/>
             </constraints>
             <size key="customSize" width="284" height="50"/>
+            <connections>
+                <outlet property="lastReadTimeLabel" destination="hAB-gX-u4f" id="tDZ-ZW-YPL"/>
+                <outlet property="readRecordLabel" destination="CN7-fu-u4Z" id="8Nf-Pj-is1"/>
+            </connections>
             <point key="canvasLocation" x="460" y="355"/>
         </collectionViewCell>
     </objects>
