--- a/LiveStone/Base.lproj/Main.storyboard
+++ b/LiveStone/Base.lproj/Main.storyboard
@@ -523,8 +523,40 @@
                             </tableViewSection>
                             <tableViewSection id="eQq-ML-UlH">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="E73-Za-cH2">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="yaQ-yI-07c">
                                         <rect key="frame" x="0.0" y="171" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yaQ-yI-07c" id="Wpi-rR-Ymd">
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Invitation" translatesAutoresizingMaskIntoConstraints="NO" id="3Fh-uN-vca">
+                                                    <rect key="frame" x="13" y="9" width="25" height="25"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="25" id="onz-iz-afx"/>
+                                                        <constraint firstAttribute="width" constant="25" id="pJz-yv-iIV"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我的邀请" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9a7-P0-Ec0">
+                                                    <rect key="frame" x="55" y="12" width="68" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3Fh-uN-vca" firstAttribute="centerY" secondItem="Wpi-rR-Ymd" secondAttribute="centerY" id="I9w-xV-Vcf"/>
+                                                <constraint firstItem="9a7-P0-Ec0" firstAttribute="leading" secondItem="3Fh-uN-vca" secondAttribute="trailing" constant="17" id="LED-dE-JvJ"/>
+                                                <constraint firstItem="3Fh-uN-vca" firstAttribute="leading" secondItem="Wpi-rR-Ymd" secondAttribute="leadingMargin" constant="5" id="QI5-3F-kmM"/>
+                                                <constraint firstItem="9a7-P0-Ec0" firstAttribute="top" secondItem="Wpi-rR-Ymd" secondAttribute="topMargin" constant="4" id="w9c-dt-lm8"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="XgL-I6-yJo" kind="show" id="802-rD-bYJ"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="E73-Za-cH2">
+                                        <rect key="frame" x="0.0" y="215" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E73-Za-cH2" id="mTN-f3-mPj">
                                             <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
@@ -556,7 +588,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="ER5-Ea-llb">
-                                        <rect key="frame" x="0.0" y="215" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="259" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ER5-Ea-llb" id="QQm-hl-abN">
                                             <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
@@ -585,7 +617,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="fEE-h5-gF7">
-                                        <rect key="frame" x="0.0" y="259" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="303" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fEE-h5-gF7" id="sw2-fz-Zha">
                                             <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
@@ -618,7 +650,7 @@
                             <tableViewSection id="Oex-q7-Lma">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="AgL-At-l5o">
-                                        <rect key="frame" x="0.0" y="339" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="383" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AgL-At-l5o" id="rC1-PR-QVb">
                                             <rect key="frame" x="0.0" y="0.0" width="567" height="43.5"/>
@@ -1103,6 +1135,59 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JT6-z3-egQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2159" y="2175"/>
+        </scene>
+        <!--我的邀请-->
+        <scene sceneID="ufO-iE-ona">
+            <objects>
+                <tableViewController hidesBottomBarWhenPushed="YES" id="XgL-I6-yJo" customClass="LSInvitationTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="qh5-eH-FWS">
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCell" id="BCH-tS-VKf">
+                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BCH-tS-VKf" id="vag-tm-pww">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="小明" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="iGD-Mi-HZj">
+                                            <rect key="frame" x="16" y="11" width="528" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.1333333333" green="0.1333333333" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="10V-Da-hXd">
+                                            <rect key="frame" x="552" y="7" width="40" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="0Xj-ih-f2L"/>
+                                            </constraints>
+                                            <state key="normal" title="邀请">
+                                                <color key="titleColor" red="0.45882352941176469" green="0.79607843137254897" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="iGD-Mi-HZj" firstAttribute="leading" secondItem="vag-tm-pww" secondAttribute="leading" constant="16" id="027-KV-16X"/>
+                                        <constraint firstItem="10V-Da-hXd" firstAttribute="centerY" secondItem="vag-tm-pww" secondAttribute="centerY" id="07s-oh-gnq"/>
+                                        <constraint firstItem="iGD-Mi-HZj" firstAttribute="centerY" secondItem="vag-tm-pww" secondAttribute="centerY" id="98N-56-f0k"/>
+                                        <constraint firstItem="10V-Da-hXd" firstAttribute="leading" secondItem="iGD-Mi-HZj" secondAttribute="trailing" constant="8" id="JUn-NY-eZ8"/>
+                                        <constraint firstAttribute="trailing" secondItem="10V-Da-hXd" secondAttribute="trailing" constant="8" id="WKe-GY-DNG"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="XgL-I6-yJo" id="gLL-xQ-zI7"/>
+                            <outlet property="delegate" destination="XgL-I6-yJo" id="yrB-fU-00Q"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="我的邀请" id="CMQ-BW-d2o"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kai-cV-kzM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2159" y="2892"/>
         </scene>
         <!--关于-->
         <scene sceneID="GkS-lk-g3H">
@@ -1695,6 +1780,7 @@
         <image name="Discovery" width="35" height="35"/>
         <image name="Feedback" width="24" height="24"/>
         <image name="Good" width="24" height="24"/>
+        <image name="Invitation" width="24" height="24"/>
         <image name="LiveStone" width="35" height="35"/>
         <image name="Location" width="14" height="18"/>
         <image name="LogOut" width="24" height="24"/>
@@ -1708,7 +1794,7 @@
         <image name="UserDefaultAvatar" width="60" height="60"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="HI7-Mm-DIQ"/>
+        <segue reference="UwV-e2-upN"/>
         <segue reference="PPq-hw-LP8"/>
     </inferredMetricsTieBreakers>
 </document>
