--- a/LiveStone/LSIntercessionParticipateFinishView.xib
+++ b/LiveStone/LSIntercessionParticipateFinishView.xib
@@ -1,85 +1,89 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="LSIntercessionParticipateFinishView">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ParticipateBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Xqi-fR-oUL">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="ParticipateBackground" translatesAutoresizingMaskIntoConstraints="NO" id="Xqi-fR-oUL">
                     <rect key="frame" x="10" y="32" width="300" height="485"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Xqi-fR-oUL" secondAttribute="height" multiplier="60:97" id="I0d-eV-0Mk"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Crucifix" translatesAutoresizingMaskIntoConstraints="NO" id="EhE-SL-axr">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Crucifix" translatesAutoresizingMaskIntoConstraints="NO" id="EhE-SL-axr">
                     <rect key="frame" x="145" y="102" width="31" height="40"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="31" id="2Xn-tC-Z8Y"/>
                         <constraint firstAttribute="width" secondItem="EhE-SL-axr" secondAttribute="height" multiplier="31:40" id="tDr-1K-f9h"/>
                     </constraints>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Halo" translatesAutoresizingMaskIntoConstraints="NO" id="ekj-Kj-Ah5">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Halo" translatesAutoresizingMaskIntoConstraints="NO" id="ekj-Kj-Ah5">
                     <rect key="frame" x="102" y="150" width="116" height="121"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="116" id="Uhe-1m-abI"/>
                         <constraint firstAttribute="width" secondItem="ekj-Kj-Ah5" secondAttribute="height" multiplier="23:24" id="hbt-fr-Qp9"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="代祷完成" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sxT-mE-VXn">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="代祷完成" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sxT-mE-VXn">
                     <rect key="frame" x="127" y="279" width="66" height="21"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="21" id="XTh-Rt-8vz"/>
                         <constraint firstAttribute="width" constant="66" id="ch9-f5-9fR"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="惟求耶和华我的　神垂顾仆人的祷告祈求，俯听仆人今日在你面前的祈祷呼吁。" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q2S-xy-UBG">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="惟求耶和华我的　神垂顾仆人的祷告祈求，俯听仆人今日在你面前的祈祷呼吁。" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q2S-xy-UBG">
                     <rect key="frame" x="33" y="308" width="255" height="54"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" red="0.33333333333333331" green="0.33333333333333331" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRi-Mw-yWi">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRi-Mw-yWi">
                     <rect key="frame" x="48" y="376" width="225" height="30"/>
-                    <color key="backgroundColor" red="0.45882352939999999" green="0.79607843140000001" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.45882352939999999" green="0.79607843140000001" blue="0.92549019610000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="我有感动说点什么">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="blessingAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="owu-Bh-mK8"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cmb-J0-TbR">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cmb-J0-TbR">
                     <rect key="frame" x="48" y="414" width="225" height="30"/>
-                    <color key="backgroundColor" red="0.45882352939999999" green="0.79607843140000001" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.45882352939999999" green="0.79607843140000001" blue="0.92549019610000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="让更多人为其代祷">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="sharedAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="xdX-JW-Rxf"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JlG-b5-hUp">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JlG-b5-hUp">
                     <rect key="frame" x="48" y="452" width="225" height="30"/>
-                    <color key="backgroundColor" red="0.45882352939999999" green="0.79607843140000001" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.45882352939999999" green="0.79607843140000001" blue="0.92549019610000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="再看看其他的">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="finishAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="fqc-vv-66w"/>
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="0.5" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="q2S-xy-UBG" secondAttribute="trailing" constant="32" id="1QJ-s7-ZEx"/>
                 <constraint firstItem="sxT-mE-VXn" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="2w9-JH-2RS"/>
@@ -103,7 +107,6 @@
                 <constraint firstItem="Xqi-fR-oUL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="32" id="sI4-CO-hu8"/>
                 <constraint firstItem="JlG-b5-hUp" firstAttribute="trailing" secondItem="TRi-Mw-yWi" secondAttribute="trailing" id="xTf-wR-jOH"/>
             </constraints>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
                 <outlet property="crucifixImageView" destination="EhE-SL-axr" id="BEq-MI-iRK"/>
                 <outlet property="crucifixTopConstraint" destination="oE8-ar-lBC" id="rqz-1W-KZ4"/>
