--- a/LiveStone/LSRegisterViewController.xib
+++ b/LiveStone/LSRegisterViewController.xib
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2657" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LSRegisterViewController">
@@ -19,18 +23,18 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="2Cl-xP-1BR">
-                    <rect key="frame" x="260" y="103" width="80" height="80"/>
+                    <rect key="frame" x="147.5" y="103" width="80" height="80"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="80" id="52B-cF-UXF"/>
                         <constraint firstAttribute="width" constant="80" id="iGj-Qi-x8J"/>
                     </constraints>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jCw-pg-WUa">
-                    <rect key="frame" x="25" y="218" width="550" height="100"/>
+                    <rect key="frame" x="25" y="218" width="325" height="100"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="手机号 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yqh-NP-whA">
                             <rect key="frame" x="15" y="13" width="61" height="21"/>
@@ -39,7 +43,7 @@
                                 <constraint firstAttribute="width" constant="61" id="cgC-BS-eUq"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密   码 :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jwv-oT-1Eb">
@@ -49,21 +53,21 @@
                                 <constraint firstAttribute="width" constant="61" id="ue1-5I-K1v"/>
                             </constraints>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IoT-PS-DrV">
-                            <rect key="frame" x="74" y="67" width="456" height="17"/>
+                            <rect key="frame" x="74" y="67" width="231" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入手机号码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MRT-UY-tIE">
-                            <rect key="frame" x="74" y="15" width="456" height="17"/>
+                            <rect key="frame" x="74" y="15" width="231" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" keyboardType="phonePad"/>
                         </textField>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstItem="IoT-PS-DrV" firstAttribute="leading" secondItem="jCw-pg-WUa" secondAttribute="leading" constant="74" id="43O-Nb-0IO"/>
                         <constraint firstAttribute="bottom" secondItem="Jwv-oT-1Eb" secondAttribute="bottom" constant="14" id="KX7-jf-9b7"/>
@@ -79,17 +83,17 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nna-Hv-h22">
-                    <rect key="frame" x="25" y="353" width="550" height="50"/>
-                    <color key="backgroundColor" red="0.23921568627450981" green="0.84705882352941175" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="25" y="353" width="325" height="50"/>
+                    <color key="backgroundColor" red="0.23921568627450981" green="0.84705882352941175" blue="0.99215686274509807" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="WN4-eX-0Ff"/>
                     </constraints>
                     <state key="normal" title="登  录">
-                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="jCw-pg-WUa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="25" id="3t8-WH-3xE"/>
                 <constraint firstItem="2Cl-xP-1BR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="topMargin" constant="95" id="KIm-1J-CF1"/>
@@ -104,21 +108,21 @@
             <point key="canvasLocation" x="141" y="8"/>
         </view>
         <view contentMode="scaleToFill" id="0RD-jc-j36">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wby-YC-cQI">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="pG2-7f-kFK">
-                            <rect key="frame" x="260" y="88" width="80" height="80"/>
+                            <rect key="frame" x="147.5" y="88" width="80" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="4ew-95-Sv5"/>
                                 <constraint firstAttribute="height" constant="80" id="h3X-Uc-366"/>
                             </constraints>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PrB-Kd-d7e">
-                            <rect key="frame" x="25" y="203" width="550" height="100"/>
+                            <rect key="frame" x="25" y="203" width="325" height="100"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="手机号 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZs-EL-5kb">
                                     <rect key="frame" x="15" y="13" width="61" height="21"/>
@@ -127,7 +131,7 @@
                                         <constraint firstAttribute="width" constant="61" id="kqn-O7-8sT"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密   码 :" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PAN-Ba-Y4b">
@@ -137,11 +141,11 @@
                                         <constraint firstAttribute="height" constant="21" id="Su9-yM-gFN"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WWv-Aj-ciV">
-                                    <rect key="frame" x="74" y="67" width="456" height="17"/>
+                                    <rect key="frame" x="74" y="67" width="231" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" keyboardType="alphabet" secureTextEntry="YES"/>
                                     <connections>
@@ -149,7 +153,7 @@
                                     </connections>
                                 </textField>
                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="输入手机号码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="h0c-ea-e2o">
-                                    <rect key="frame" x="74" y="15" width="451" height="17"/>
+                                    <rect key="frame" x="74" y="15" width="226" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     <connections>
@@ -157,7 +161,7 @@
                                     </connections>
                                 </textField>
                             </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="h0c-ea-e2o" secondAttribute="trailing" constant="25" id="1Gg-Ee-2kF"/>
                                 <constraint firstAttribute="bottom" secondItem="PAN-Ba-Y4b" secondAttribute="bottom" constant="14" id="DPQ-gU-gMJ"/>
@@ -173,33 +177,33 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ckk-xs-UoG">
-                            <rect key="frame" x="25" y="338" width="550" height="50"/>
-                            <color key="backgroundColor" red="0.23921568630000001" green="0.84705882349999995" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                            <rect key="frame" x="25" y="338" width="325" height="50"/>
+                            <color key="backgroundColor" red="0.23921568630000001" green="0.84705882349999995" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="JEM-Ev-5Ic"/>
                             </constraints>
                             <state key="normal" title="登  录">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="loginAction:" destination="-1" eventType="touchUpInside" id="RKn-yl-c8G"/>
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yPn-2x-TIf">
-                            <rect key="frame" x="515" y="396" width="60" height="30"/>
+                            <rect key="frame" x="288" y="396" width="62" height="30"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="60" id="cjd-gq-sdb"/>
+                                <constraint firstAttribute="width" constant="62" id="cjd-gq-sdb"/>
                                 <constraint firstAttribute="height" constant="30" id="pN2-O7-cvF"/>
                             </constraints>
                             <state key="normal" title="注册帐号">
-                                <color key="titleColor" red="0.23921568630000001" green="0.84705882349999995" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleColor" red="0.23921568630000001" green="0.84705882349999995" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
                             <connections>
                                 <action selector="joinUsAction:" destination="-1" eventType="touchUpInside" id="0YP-Qe-2sT"/>
                             </connections>
                         </button>
                     </subviews>
-                    <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="PrB-Kd-d7e" secondAttribute="trailing" constant="25" id="2Wg-ao-Hpi"/>
                         <constraint firstItem="Ckk-xs-UoG" firstAttribute="top" secondItem="PrB-Kd-d7e" secondAttribute="bottom" constant="35" id="4ZT-MR-XzJ"/>
@@ -216,7 +220,7 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Wby-YC-cQI" secondAttribute="trailing" id="GS4-K0-F9g"/>
                 <constraint firstItem="Wby-YC-cQI" firstAttribute="leading" secondItem="0RD-jc-j36" secondAttribute="leading" id="jaH-HV-8G0"/>
